--- a/WebAppProject.Tests/packages.config
+++ b/WebAppProject.Tests/packages.config
@@ -7,4 +7,5 @@
   <package id="MSTest.TestAdapter" version="1.1.17" targetFramework="net471" />
   <package id="MSTest.TestFramework" version="1.1.17" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net471" />
+  <package id="OctoPack" version="3.6.3" targetFramework="net471" developmentDependency="true" />
 </packages>
