--- a/WebAppProject/WebAppProject.csproj
+++ b/WebAppProject/WebAppProject.csproj
@@ -29,7 +29,9 @@
     </NuGetPackageImportStamp>
     <TypeScriptToolsVersion>2.6</TypeScriptToolsVersion>
   </PropertyGroup>
-
+  <PropertyGroup>
+    <RunOctoPack>true</RunOctoPack>
+  </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
